# Vibrae

./: .env.example  .gitignore  .pre-commit-config.yaml  .sops.yaml  ARCHITECTURE.md  Dockerfile.api  LICENSE  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  run.sh  serve_spa.py  setup.sh  stop.sh  vibrae
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  deploy-api.yml  sbom.yml
apps/api/: pyproject.toml
apps/api/src/vibrae_api/: __init__.py  main.py
apps/api/src/vibrae_api/routes/: control.py  logs.py  scenes.py  schedule.py  users.py
apps/web/: app.json  babel.config.js  env.d.ts  manifest.json  tsconfig.json
apps/web/app/auth/: login.tsx
apps/web/app/tabs/: home.tsx  scenes.tsx
apps/web/assets/styles/: logs.styles.js  scenes.styles.js
apps/web/constants/: Colors.js
apps/web/lib/: api.ts  storage.ts
backend/: .env.example  __init__.py  auth.py  config.py  db.py  init_db.py  logging.ini  main.py  models.py  player.py  scheduler.py
backend/raspi/: deploy.sh
backend/routes/: control.py  logs.py  scenes.py  schedule.py  users.py
config/: logging.ini  nginx.conf
config/env/: .env.backend.enc  .env.backend.example  .env.frontend.enc  .env.frontend.example
docs/: CLI_REFERENCE.md  URL_ROUTING.md
front/: .env.example  .gitignore  app.json  babel.config.js  eslint.config.js  manifest.json  package-lock.json  package.json
front/app/: _layout.tsx  index.tsx
front/app/auth/: _layout.tsx  login.tsx
front/app/tabs/: _layout.tsx  home.tsx  logs.tsx  routines.tsx  scenes.tsx
front/assets/components/: GlassView.tsx
front/assets/styles/: auth.styles.js  create.styles.js  home.styles.js  logs.styles.js  scenes.styles.js  theme.js
front/constants/: Colors.js
front/lib/: api.ts  config.ts  storage.ts
front/public/: manifest.json
lib/: cli-helpers.sh  env-manager.sh  vibrae_helpers.sh
scripts/: README.md  cfctl.sh  nginxctl.sh
scripts/app/: run.sh  setup.sh  stop.sh
scripts/pi/: run.sh  setup.sh  stop.sh  update.sh
tests/: conftest.py  test_auth_token.py  test_cli_version.py  test_config_paths.py  test_db_init.py  test_player_crossfade.py  test_player_stop_after_song.py  test_scheduler_match.py  test_scheduler_time_windows.py
vibrae_monorepo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
