[project]
name = "vibrae-monorepo"
version = "0.1.0"
description = "Vibrae monorepo (API + core)"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "pydantic",
  "passlib[bcrypt]",
  "bcrypt<5.0",  # explicit pin aligning with requirements.txt
  "python-jose[cryptography]",
  "python-dotenv",
  "python-vlc",
  "websockets",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools]
packages = []

[tool.uvicorn]
factory = false
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
branch = true
source = ["packages/core/src/vibrae_core", "apps/api/src/vibrae_api"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
