[project]
name = "vibrae-monorepo"
version = "0.1.0"
description = "Vibrae: full-stack music automation system"
authors = [{ name = "Dani Callero" }]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "pydantic",
  "passlib[bcrypt]",
  "bcrypt<4.0",
  "python-jose[cryptography]",
  "python-dotenv",
  "python-vlc",
  "websockets",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["packages/core/src", "apps/api/src"]

[tool.uvicorn]
factory = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
branch = true
source = ["packages/core/src/vibrae_core", "apps/api/src/vibrae_api"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
