[project]
name = "vibrae-api"
version = "0.1.0"
description = "Vibrae API service (FastAPI) bridging legacy backend layout"
readme = "../../README.md"
license = { text = "GPL-3.0-or-later" }
authors = [ { name = "Dani Callero" } ]
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "python-dotenv",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
  "bcrypt<4.0",
  "pydantic",
  "python-vlc",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.format]
quote-style = "double"

